Fix Alert Scrollbar + Half Fix Low VH issues

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -5,7 +5,8 @@
     border-radius: 15px 0 0 15px;
     padding: 25px;
     box-sizing: border-box;
-    height: calc(100% - 205px);
+    height: calc(100% - 55px);
+    max-height: 750px;
     width: calc(100% - ((100vh - 120px)/2.11));
     background: linear-gradient(to bottom right, rgba(85, 150, 191, .9), rgba(70, 105, 175, .9));
     position: absolute;
