--- a/scss/alerts/_alerts.scss
+++ b/scss/alerts/_alerts.scss
@@ -78,7 +78,7 @@
     top: 50%;
     left: 0;
     transform: translateY(-50%);
-    overflow-y: auto;
+    overflow-y: scroll;
     max-height: calc(100% - 24px);
     width: calc(100% - 14px);
     padding-right: 8px;
