--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,8 +42,9 @@ html {
 
 body {
     background-color: var(--body-bg-color);
-    max-width: 100vw;
-    max-height: 100vh;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     margin: 0;
 }
